--- a/Calci/EnchancedCalc.xaml
+++ b/Calci/EnchancedCalc.xaml
@@ -12,6 +12,7 @@
                LineBreakMode="NoWrap"
                Grid.ColumnSpan="4"
                Text=""
+        
                HorizontalTextAlignment="End"
                VerticalTextAlignment="Start"
                Grid.Row="0"/>
@@ -22,65 +23,68 @@
                VerticalTextAlignment="End"
                LineBreakMode="NoWrap" Grid.ColumnSpan="4" />
 
-        <BoxView BackgroundColor="{StaticResource Gray100}" HeightRequest="1"
+        <BoxView BackgroundColor="{StaticResource Gray500}" HeightRequest="1"
                  Grid.Row="0" VerticalOptions="End"
                  Grid.ColumnSpan="4"
                  />
-        
+
+        <Button Text="(" Grid.Row="1" Grid.Column="0"
+               Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen" />
         <Button Text=")" Grid.Row="1" Grid.Column="1"
-               Clicked="OnRightParenthisis" />
+               Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="Sqrt" Grid.Row="1" Grid.Column="2"
-               Clicked="OnSqRt" />
+               Clicked="OnSqRt" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="Mod" Grid.Row="1" Grid.Column="3"
-               Clicked="OnModulus" />
+               Clicked="OnModulus" TextColor="Black" BackgroundColor ="LightGreen"/>
 
 
         <Button Text="C" Grid.Row="2" Grid.Column="0"
-               Clicked="OnClear" />
+               Clicked="OnClear" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="+/-" Grid.Row="2" Grid.Column="1"
-               Clicked="OnNegative" />
+               Clicked="OnNegative" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="%" Grid.Row="2" Grid.Column="2"
-               Clicked="OnPercentage" />
+               Clicked="OnPercentage" TextColor="Black" BackgroundColor ="LightGreen"/>
 
         <Button Text="7" Grid.Row="3" Grid.Column="0"
-               Clicked="OnSelectNumber" />
+               Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="8" Grid.Row="3" Grid.Column="1"
-               Clicked="OnSelectNumber" />
+               Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="9" Grid.Row="3" Grid.Column="2"
-               Clicked="OnSelectNumber" />
+               Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
 
         <Button Text="4" Grid.Row="4" Grid.Column="0"
-              Clicked="OnSelectNumber" />
+              Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="5" Grid.Row="4" Grid.Column="1"
-              Clicked="OnSelectNumber" />
+              Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="6" Grid.Row="4" Grid.Column="2"
-              Clicked="OnSelectNumber" />
+              Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
 
         <Button Text="1" Grid.Row="5" Grid.Column="0"
-              Clicked="OnSelectNumber" />
+              Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="2" Grid.Row="5" Grid.Column="1"
-              Clicked="OnSelectNumber" />
+              Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="3" Grid.Row="5" Grid.Column="2"
-              Clicked="OnSelectNumber" />
+              Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
 
         <Button Text="00" Grid.Row="6" Grid.Column="0" 
-              Clicked="OnSelectNumber" />
+              Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="0" Grid.Row="6" Grid.Column="1" 
-              Clicked="OnSelectNumber" />
+              Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="." Grid.Row="6" Grid.Column="2" 
-              Clicked="OnSelectNumber" />
+              Clicked="OnSelectNumber" TextColor="Black" BackgroundColor ="LightGreen"/>
 
         <Button Text="÷" Grid.Row="2" Grid.Column="3"
-               Clicked="OnSelectOperator" />
+               Clicked="OnSelectOperator" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="×" Grid.Row="3" Grid.Column="3"
-               Clicked="OnSelectOperator" />
+               Clicked="OnSelectOperator" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="-" Grid.Row="4" Grid.Column="3"
-               Clicked="OnSelectOperator" />
+               Clicked="OnSelectOperator" TextColor="Black" BackgroundColor ="LightGreen"/>
         <Button Text="+" Grid.Row="5" Grid.Column="3"
-               Clicked="OnSelectOperator" />
+               Clicked="OnSelectOperator" TextColor="Black" BackgroundColor ="LightGreen"/>
 
         <Button Text="=" Grid.Row="6" Grid.Column="3" 
-               Clicked="OnCalculate" />
+               Clicked="OnCalculate" TextColor="Black" BackgroundColor ="LightGreen"/>
+
 
     </Grid>
 
